--- a/msscs_client/src-tauri/Cargo.toml
+++ b/msscs_client/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ base64 = "0.22"
 dirs = "5.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+libp2p-identity = "0.2"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
