--- a/msscs_v4/Cargo.toml
+++ b/msscs_v4/Cargo.toml
@@ -21,6 +21,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde_json = "1.0"
 toml = "0.8"
+async-trait = "0.1"
 
 # Advanced P2P networking (libp2p)
 libp2p = { version = "0.53", features = [
@@ -31,11 +32,13 @@ libp2p = { version = "0.53", features = [
     "yamux",
     "request-response",
     "tokio",
+    "macros",
+    "dns",
 ] }
 futures = "0.3"
 
 # Quantum-resistant cryptography
-pqc-kyber = "0.7"
+pqc_kyber = "0.7"
 ed25519-dalek = { version = "2.0", features = ["rand_core"] }
 rand_core = "0.6"
 
